[gd_scene load_steps=16 format=3 uid="uid://cn680eaa8r3xm"]

[ext_resource type="Script" uid="uid://7srku83i56d3" path="res://scripts/main.gd" id="1_jc6uw"]
[ext_resource type="PackedScene" path="res://scenes/airport/Airport.tscn" id="2_ny6nj"]
[ext_resource type="Script" uid="uid://cloiwv20wqb2f" path="res://scripts/ollama_client.gd" id="3_fvnlr"]
[ext_resource type="Script" uid="uid://catjpfemx51xx" path="res://scripts/sim/sim_controller.gd" id="4_r04aq"]
[ext_resource type="Script" uid="uid://20r6nwvpfhs5" path="res://scripts/sim/arrival_generator.gd" id="5_7qg0b"]
[ext_resource type="Script" uid="uid://6ajwrow5f6yr" path="res://scripts/sim/sim_state.gd" id="6_gl3gn"]
[ext_resource type="Script" uid="uid://cq85u6lplt3k8" path="res://scripts/sim/stand_manager.gd" id="7_wdmjo"]
[ext_resource type="Script" uid="uid://dysp2asee0r23" path="res://scripts/sim/eligibility.gd" id="8_6rfo5"]
[ext_resource type="PackedScene" path="res://scenes/actors/AircraftActor.tscn" id="9_2w6gd"]
[ext_resource type="Script" uid="uid://dft0lcibylnqe" path="res://scripts/upgrade_manager.gd" id="10_k2t0s"]
[ext_resource type="Script" uid="uid://byi51xp6gb8mq" path="res://scripts/llm_agent.gd" id="11_cit2v"]
[ext_resource type="Script" path="res://scripts/ui/income_chart.gd" id="12_income"]
[ext_resource type="Script" path="res://scripts/ui/traffic_chart.gd" id="13_traffic"]

[sub_resource type="SphereMesh" id="1_sun_mesh"]
radius = 40.0
height_segments = 24
radial_segments = 32

[sub_resource type="StandardMaterial3D" id="2_sun_mat"]
albedo_color = Color(1, 0.9, 0.6, 1)
emission_enabled = true
emission = Color(1, 0.9, 0.6, 1)
emission_energy = 2.0

[sub_resource type="StyleBoxFlat" id="3_console_bg"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main" type="Node3D"]
script = ExtResource("1_jc6uw")

[node name="OllamaClient" type="Node" parent="."]
script = ExtResource("3_fvnlr")

[node name="Sim" type="Node" parent="."]
script = ExtResource("4_r04aq")
aircraft_scene = ExtResource("9_2w6gd")

[node name="ArrivalGenerator" type="Node" parent="Sim"]
script = ExtResource("5_7qg0b")

[node name="SimState" type="Node" parent="Sim"]
script = ExtResource("6_gl3gn")

[node name="StandManager" type="Node" parent="Sim"]
script = ExtResource("7_wdmjo")

[node name="Eligibility" type="Node" parent="Sim"]
script = ExtResource("8_6rfo5")

[node name="Upgrades" type="Node" parent="."]
script = ExtResource("10_k2t0s")

[node name="LLM" type="Node" parent="."]
script = ExtResource("11_cit2v")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.8625136, 0.065174855, 0.50181913, -8.669465e-08, -0.99167114, 0.1287956, 0.50603384, -0.11108799, -0.8553299, 306.07593, 140, 0)
light_energy = 1.241
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_bias = 0.02
directional_shadow_mode = 1
directional_shadow_max_distance = 1200.0

[node name="SunVisual" type="MeshInstance3D" parent="."]
mesh = SubResource("1_sun_mesh")
material_override = SubResource("2_sun_mat")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2000, 0)

[node name="AirportRoot" parent="." instance=ExtResource("2_ny6nj")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 120, 120)
projection = 1
fov = 50.0
size = 160.0
far = 20000.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bank" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 6.0
offset_right = -16.0
offset_bottom = 26.0
grow_horizontal = 0
text = "Bank: $0"

[node name="AirportStatus" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 6.0
offset_right = 160.0
offset_bottom = 26.0
grow_horizontal = 0
horizontal_alignment = 1
text = "Rwy: -- m | Stands: --"

[node name="UpgradesPanel" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
offset_left = 16.0
offset_top = 48.0
offset_right = 320.0
offset_bottom = 260.0
theme_override_constants/separation = 6

[node name="UpgradesList" type="ItemList" parent="UI/HUD/UpgradesPanel"]
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true

[node name="TimeControls" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 30.0
offset_right = -16.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_constants/separation = 4

[node name="Btn0_5x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "0.5x"

[node name="Btn1x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "1x"

[node name="Btn2x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "2x"

[node name="Btn4x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "4x"

[node name="Btn8x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "8x"

[node name="Btn16x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "16x"

[node name="Btn32x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "32x"

[node name="Btn64x" type="Button" parent="UI/HUD/TimeControls"]
layout_mode = 2
text = "64x"

[node name="DebugAddCash" type="Button" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 60.0
offset_right = -16.0
offset_bottom = 88.0
grow_horizontal = 0
text = "Add $5000 (debug)"

[node name="BuildQueue" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 94.0
offset_right = -16.0
offset_bottom = 230.0
grow_horizontal = 0
theme_override_constants/separation = 4

[node name="BuildLabel" type="Label" parent="UI/HUD/BuildQueue"]
layout_mode = 2
text = "Construction"

[node name="BuildList" type="ItemList" parent="UI/HUD/BuildQueue"]
layout_mode = 2
size_flags_vertical = 3
allow_search = false

[node name="SimClock" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
text = "00:00"

[node name="IncomeChart" type="Control" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -120.0
offset_right = -140.0
offset_bottom = -50.0
grow_horizontal = 0
script = ExtResource("12_income")

[node name="TrafficChart" type="Control" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -190.0
offset_right = -140.0
offset_bottom = -120.0
grow_horizontal = 0
script = ExtResource("13_traffic")

[node name="Console" type="RichTextLabel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.4
anchor_bottom = 1.0
offset_top = -180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("3_console_bg")
bbcode_enabled = true
text = "[b]Console[/b]\\nInitialized."
scroll_following = true

[node name="UpgradesPanelToggle" type="Button" parent="UI/HUD"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 136.0
offset_bottom = 44.0
text = "Upgrades"
